# cvImage2Gstreamer_file

./: README.md
Linux/: CMakeLists.txt  OpenCv2GstVideo.cpp  OutputFile.ts  ReadMe.txt  cvImageToGstreamerFile
Windows/: CMakeLists.txt  OpenCv2GstVideo.cpp  ReadMe.txt
Windows/Release/: OutputFile.ts
